# graph-rag-news-explorer

./: .env  .env.example  docker-compose.yml  package-lock.json  package.json
services/api/: Dockerfile  requirements.txt
services/api/app/: config.py  crawler.py  db.py  graph.py  graph_client.py  http.py  ingest_jobs.py  ingest_routes.py  jobstore.py  main.py  models.sql  nlp.py  opensearch_index.py  queues.py  schemas.py  search.py  topic.py
services/api/app/htmlfast/: CMakeLists.txt  build.sh
services/api/app/htmlfast/src/: bindings.cpp  html_parser.cpp  html_parser.hpp
services/api/app/proto/: graph_engine.proto
services/frontend/: package.json  tsconfig.json
services/frontend/components/: ExpandPanel.tsx  GraphSummary.tsx  GraphVis.tsx  IngestPanel.tsx  StoryGraph.tsx  Timeline.tsx  TimelineChart.tsx
services/frontend/lib/: api.ts
services/frontend/pages/: index.tsx  page.tsx
services/graph_engine/: CMakeLists.txt  Dockerfile
services/graph_engine/src/: engine.cpp  engine.hpp  server.cpp
